name:                BF
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/luc-tielen/BF#README.md
license:             BSD3
license-file:        LICENSE
author:              Luc Tielen
maintainer:          example@example.com
copyright:           2017 Luc Tielen
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BF.Types
                     , BF.Parser
                     , BF.Interpreter
                     , BF.Compiler
  build-depends:       base == 4.*
                     , megaparsec == 9.*
                     , llvm-hs == 9.*
                     , llvm-hs-pure == 9.*
                     , text == 1.*
                     , mtl >= 2.2 && < 3
                     , array >= 0.5 && < 1
  default-language:    Haskell2010

executable BF-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , BF
                     , llvm-hs == 9.*
                     , llvm-hs-pure == 9.*
                     , text == 1.*
                     , megaparsec == 9.*
  default-language:    Haskell2010

test-suite BF-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BF
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/BF
